--- a/src/Client/JobsWorkerNodeService/appsettings.json
+++ b/src/Client/JobsWorkerNodeService/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "GrpcConfig": {
-    "Address": "https://172.27.241.153:50061"
+    "Address": "https://localhost:5001"
   }
 }
