--- a/src/Server/JobsWorkerWebService/JobsWorkerWebService/appsettings.Development.json
+++ b/src/Server/JobsWorkerWebService/JobsWorkerWebService/appsettings.Development.json
@@ -1,14 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Debug"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MySQL": "server=10.201.76.20;userid=root;password=XWd@2024IT;database=jobs_worker;",
+    "MyProfileSQL": "server=10.201.76.20;userid=root;password=XWd@2024IT;database=data_count;",
     "Sqlite": "Data Source=dev.db;"
   },
   "ServerConfig": {
