--- a/src/Server/JobsWorkerWebService/JobsWorkerWebService/appsettings.json
+++ b/src/Server/JobsWorkerWebService/JobsWorkerWebService/appsettings.json
@@ -9,11 +9,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MySQL": "server=10.201.76.20;userid=root;password=XWd@2024IT;database=jobs_worker;",
+    "MyProfileSQL": "server=10.201.76.20;userid=root;password=XWd@2024IT;database=data_count;",
     "Sqlite": "Data Source=dev.db;"
   },
   "ServerConfig": {
     "Channel": "public",
-    "VirtualFileSystem": "ftp",
+    "VirtualFileSystem": "ftp"
   },
   "VirtualFileSystemConfig": {
     "fileCachesPathDir": "JobsWorkerRoot/Channels/public/Files/Caches/{nodeName}/",
