--- a/src/Client/ftpservertool/config/updateconfig_bl_randome50.json
+++ b/src/Client/ftpservertool/config/updateconfig_bl_randome50.json
@@ -3,7 +3,7 @@
   "port": 21,
   "username": "ftpuser",
   "password": "Szch@2023",
-  "action": "updateconfig",
+  "action": "randomeupdateconfig",
   "args": [
     "mysql_host=172.27.241.153",
     "mysql_userid=root",
@@ -14,6 +14,7 @@
     "initonly=false",
     "deleteonly=false",
     "hostnames=,",
-    "filtertype=include"
+    "filtertype=include",
+    "count=20"
   ]
 }
