--- a/src/Server/JobsWorkerWebService/JobsWorkerWebService/JobsWorkerWebService.csproj
+++ b/src/Server/JobsWorkerWebService/JobsWorkerWebService/JobsWorkerWebService.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="AntDesign.Charts" Version="0.4.0" />
     <PackageReference Include="AntDesign.ProLayout" Version="0.16.2" />
     <PackageReference Include="Grpc.Net.Client.Web" Version="2.60.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
     <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
 	<PackageReference Include="Grpc.AspNetCore.Server" Version="2.60.0" />
