--- a/src/Server/JobsWorkerWebService/JobsWorkerWebService/Properties/launchSettings.json
+++ b/src/Server/JobsWorkerWebService/JobsWorkerWebService/Properties/launchSettings.json
@@ -1,12 +1,4 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:53775",
-      "sslPort": 44358
-    }
-  },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
@@ -17,12 +9,21 @@
     },
     "JobsWorkerWebService": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
+      "commandLineArgs": "--env Development",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000;https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": "true",
+      "applicationUrl": "http://localhost:5000;https://localhost:5001"
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:53775",
+      "sslPort": 44358
     }
   }
 }
