--- a/src/Shared/JobsWorker.Shared/JobsWorker.Shared.csproj
+++ b/src/Shared/JobsWorker.Shared/JobsWorker.Shared.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.1" />
     <PackageReference Include="Google.Protobuf" Version="3.25.2" />
     <PackageReference Include="Grpc.Net.Client" Version="2.60.0" />
     <PackageReference Include="Grpc.Tools" Version="2.60.0">
