--- a/src/MaccorUploadTool/MaccorUploadTool.csproj
+++ b/src/MaccorUploadTool/MaccorUploadTool.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Platforms>AnyCPU;x64</Platforms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +18,7 @@
 
 
    <ItemGroup>
+	  <PackageReference Include="RocksDB" Version="8.11.3.46984" />
 	  <PackageReference Include="CommandLineParser" Version="2.9.1" />
 	  <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
