--- a/src/NodeService.WindowsService/appsettings.Development.json
+++ b/src/NodeService.WindowsService/appsettings.Development.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "GrpcConfig": {
-    //"Address": "https://172.27.241.153:50061"
-    "Address": "https://localhost:5001"
+    "Address": "https://172.27.241.153:50061"
+    //"Address": "https://localhost:5001"
     //"Address": "https://172.27.242.223:50061/"
   }
 }
