--- a/src/NodeService.UpdateService/appsettings.json
+++ b/src/NodeService.UpdateService/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "UpdateConfig": {
     "HttpAddress": "http://172.27.242.223:50060/",
+    //"HttpAddress": "http://localhost:5000/",
     "InstallDirectory": "C:/shouhu/NodeService.WindowsService/",
     "DurationMinutes": 10
   }
