--- a/src/MaccorUploadTool/Properties/launchSettings.json
+++ b/src/MaccorUploadTool/Properties/launchSettings.json
@@ -1,8 +1,24 @@
 {
   "profiles": {
-    "MaccorUploadTool": {
+    "WSL": {
+      "commandName": "WSL2",
+      "distributionName": ""
+    },
+    "Stat": {
       "commandName": "Project",
-      "commandLineArgs": "--KafkaBrokerList \"10.201.76.22:9092,10.201.76.23:9092,10.201.76.24\"\r\n--Directory \"D:/Maccor\" --ParentProcessId 5728 --NodeId \"DebugMachine\" --DateTime \"2022/04/02\""
+      "commandLineArgs": "--KafkaBrokerList \"10.201.76.22:9092,10.201.76.23:9092,10.201.76.24\"\r\n--Directory \"D:/Maccor\" --ParentProcessId 6760 --NodeId \"DebugMachine\" --DateTime \"2022/04/02\" --Mode Stat --FtpConfigId 45be0fd8-4823-4523-85d1-783c0778a95a"
+    },
+    "Kafka": {
+      "commandName": "Project",
+      "commandLineArgs": "--KafkaBrokerList \"10.201.76.22:9092,10.201.76.23:9092,10.201.76.24\"\r\n--Directory \"D:/Maccor\" --ParentProcessId 6760 --NodeId \"DebugMachine\" --DateTime \"2022/04/02\" --Mode Kafka --FtpConfigId 45be0fd8-4823-4523-85d1-783c0778a95a"
+    },
+    "Ftp": {
+      "commandName": "Project",
+      "commandLineArgs": "--KafkaBrokerList \"10.201.76.22:9092,10.201.76.23:9092,10.201.76.24\"\r\n--Directory \"D:/Maccor\" --ParentProcessId 6760 --NodeId \"DebugMachine\" --DateTime \"2022/04/02\" --Mode Ftp --FtpConfigId 45be0fd8-4823-4523-85d1-783c0778a95a"
+    },
+    "ServerKafka": {
+      "commandName": "Project",
+      "commandLineArgs": "--KafkaBrokerList \"10.201.76.22:9092,10.201.76.23:9092,10.201.76.24\"\r\n--Directory \"D:\\MaccorFiles\" --ParentProcessId 6760 --NodeId \"DebugMachine\" --DateTime \"2022/04/02\" --Mode ServerKafka --FtpConfigId 45be0fd8-4823-4523-85d1-783c0778a95a --debugger 1"
     }
   }
 }
