--- a/src/NodeService.Installer/NodeService.Installer/NodeService.Installer.csproj
+++ b/src/NodeService.Installer/NodeService.Installer/NodeService.Installer.csproj
@@ -21,6 +21,15 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="FluentFTP" Version="48.0.3" /></ItemGroup>
+		<PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
+		<PackageReference Include="Core.System.ServiceProcess" Version="2.0.1" />
+		<PackageReference Include="FluentFTP" Version="48.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\..\NodeService.Infrastructure\src\NodeService.Infrastructure\NodeService.Infrastructure.csproj" />
+	</ItemGroup>
+
+	<Import Project="..\..\..\ServiceProcessInstallerSharedProject\ServiceProcessInstallerSharedProject.projitems" Label="Shared" />
 
 </Project>
