--- a/src/NodeService.DaemonService/appsettings.Development.json
+++ b/src/NodeService.DaemonService/appsettings.Development.json
@@ -6,11 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "GrpcConfig": {
-    "Address": "https://172.27.241.153:50061"
-    //"Address": "https://localhost:5001"
-    //"Address": "https://172.27.242.223:50061/"
-  },
   "AppConfig": {
     "PackageUpdates": [
       {
@@ -23,13 +18,13 @@
         "ServiceName": "NodeService.UpdateService"
       },
       {
-        "DisplayName": "NodeService.DaemonService",
-        "Description": "NodeService.DaemonService",
+        "DisplayName": "NodeService.WindowsService",
+        "Description": "NodeService.WindowsService",
         //"HttpAddress": "http://172.27.242.223:50060/",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:/shouhu/NodeService.DaemonService/",
+        "InstallDirectory": "C:/shouhu/NodeService.WindowsService/",
         "DurationMinutes": 10,
-        "ServiceName": "NodeService.DaemonService"
+        "ServiceName": "NodeService.WindowsService"
       }
     ]
   }
