--- a/src/NodeService.DaemonService/appsettings.json
+++ b/src/NodeService.DaemonService/appsettings.json
@@ -6,12 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ServerConfig": {
-    "GrpcAddress": "https://172.27.242.223:50061/",
-    "HttpAddress": "http://172.27.242.223:50060/"
-    //"GrpcAddress": "https://localhost:5001",
-    //"HttpAddress": "http://localhost:5000"
-  },
   "AppConfig": {
     "PackageUpdates": [
       {
@@ -24,13 +18,13 @@
         "ServiceName": "NodeService.UpdateService"
       },
       {
-        "DisplayName": "NodeService.DaemonService",
-        "Description": "NodeService.DaemonService",
+        "DisplayName": "NodeService.WindowsService",
+        "Description": "NodeService.WindowsService",
         "HttpAddress": "http://172.27.242.223:50060/",
         //"HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:/shouhu/NodeService.DaemonService/",
+        "InstallDirectory": "C:/shouhu/NodeService.WindowsService/",
         "DurationMinutes": 10,
-        "ServiceName": "NodeService.DaemonService"
+        "ServiceName": "NodeService.WindowsService"
       }
     ]
   }
