--- a/src/NodeService.UpdateService/appsettings.json
+++ b/src/NodeService.UpdateService/appsettings.json
@@ -6,10 +6,26 @@
     }
   },
   "AllowedHosts": "*",
-  "UpdateConfig": {
-    "HttpAddress": "http://172.27.242.223:50060/",
-    //"HttpAddress": "http://localhost:5000/",
-    "InstallDirectory": "C:/shouhu/NodeService.WindowsService/",
-    "DurationMinutes": 10
+  "AppConfig": {
+    "PackageUpdates": [
+      {
+        "DisplayName": "NodeService.WindowsService",
+        "Description": "NodeService.WindowsService",
+        "HttpAddress": "http://172.27.242.223:50060/",
+        //"HttpAddress": "http://localhost:5000/",
+        "InstallDirectory": "C:/shouhu/NodeService.WindowsService/",
+        "DurationMinutes": 10,
+        "ServiceName": "NodeService.WindowsService"
+      },
+      {
+        "DisplayName": "NodeService.UpdateService",
+        "Description": "NodeService.UpdateService",
+        "HttpAddress": "http://172.27.242.223:50060/",
+        //"HttpAddress": "http://localhost:5000/",
+        "InstallDirectory": "C:/shouhu/NodeService.UpdateService/",
+        "DurationMinutes": 10,
+        "ServiceName": "NodeService.UpdateService"
+      }
+    ]
   }
 }
