--- a/src/NodeService.WindowsService/NodeService.WindowsService.csproj
+++ b/src/NodeService.WindowsService/NodeService.WindowsService.csproj
@@ -28,6 +28,8 @@
 		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
 		<PackageReference Include="Quartz" Version="3.8.0" />
 		<PackageReference Include="System.DirectoryServices" Version="8.0.0" />
+		<PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
+		<PackageReference Include="Core.System.ServiceProcess" Version="2.0.1" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Properties\PublishProfiles\" />
@@ -44,6 +46,7 @@
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
+	<Import Project="..\ServiceProcessInstallerSharedProject\ServiceProcessInstallerSharedProject.projitems" Label="Shared" />
 
 
 </Project>
