--- a/src/NodeService.UpdateService/NodeService.UpdateService.csproj
+++ b/src/NodeService.UpdateService/NodeService.UpdateService.csproj
@@ -23,10 +23,8 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\NodeService.Infrastructure\src\NodeService.Infrastructure\NodeService.Infrastructure.csproj" />
+	  <ProjectReference Include="..\NodeService.ServiceProcess\NodeService.ServiceProcess.csproj" />
 	</ItemGroup>
-
-
-	<Import Project="..\ServiceProcessInstallerSharedProject\ServiceProcessInstallerSharedProject.projitems" Label="Shared" />
 
 
 
