--- a/src/NodeService.DaemonService/NLog.config
+++ b/src/NodeService.DaemonService/NLog.config
@@ -15,7 +15,7 @@
 
     <target name="logfile"
 				xsi:type="File"
-				fileName="${basedir}/logs/${appName}-${shortdate}.log"
+				fileName="${basedir}/../logs/${appName}-${shortdate}.log"
 				layout="${longdate} [${uppercase:${level}}] ${callsite}(${callsite-filename:includeSourcePath=False}:${callsite-linenumber}) - ${message} ${exception:format=ToString}"
 				maxArchiveFiles="99"
 				archiveFileName="${basedir}/logs/${appName}-${shortdate}-${###}.log"
