--- a/src/NodeService.UpdateService/NLog.config
+++ b/src/NodeService.UpdateService/NLog.config
@@ -6,7 +6,7 @@
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
 
-  <variable name="appName" value="NodeService.Update"/>
+  <variable name="appName" value="NodeService.UpdateService"/>
 
   <targets>
     <target name="logconsole" xsi:type="Console"
@@ -15,7 +15,7 @@
 
     <target name="logfile"
 				xsi:type="File"
-				fileName="${basedir}/logs/${appName}-${shortdate}.log"
+				fileName="${basedir}/../logs/${appName}-${shortdate}.log"
 				layout="${longdate} [${uppercase:${level}}] ${callsite}(${callsite-filename:includeSourcePath=False}:${callsite-linenumber}) - ${message} ${exception:format=ToString}"
 				maxArchiveFiles="99"
 				archiveFileName="${basedir}/logs/${appName}-${shortdate}-${###}.log"
