--- a/src/NodeService.WindowsService/appsettings.Development.json
+++ b/src/NodeService.WindowsService/appsettings.Development.json
@@ -11,8 +11,8 @@
     //"Address": "https://localhost:5001"
     //"Address": "https://172.27.242.223:50061/"
   },
-  "AppConfig": {
-    "PackageUpdates": [
+  "ServiceProcessConfiguration": {
+    "Contexts": [
       {
         "DisplayName": "NodeService.UpdateService",
         "Description": "NodeService.UpdateService",
