--- a/src/NodeService.WindowsService/appsettings.json
+++ b/src/NodeService.WindowsService/appsettings.json
@@ -12,8 +12,8 @@
     //"GrpcAddress": "https://localhost:5001",
     //"HttpAddress": "http://localhost:5000"
   },
-  "AppConfig": {
-    "PackageUpdates": [
+  "ServiceProcessConfiguration": {
+    "Contexts": [
       {
         "DisplayName": "NodeService.UpdateService",
         "Description": "NodeService.UpdateService",
