--- a/src/NodeService.DaemonService/appsettings.Development.json
+++ b/src/NodeService.DaemonService/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "AppConfig": {
-    "PackageUpdates": [
+  "ServiceProcessConfiguration": {
+    "Contexts": [
       {
         "DisplayName": "NodeService.UpdateService",
         "Description": "NodeService.UpdateService",
