--- a/src/NodeService.WindowsService/UpdateService.NLog.config
+++ b/src/NodeService.WindowsService/UpdateService.NLog.config
@@ -6,7 +6,7 @@
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
 
-  <variable name="appName" value="NodeService.Client"/>
+  <variable name="appName" value="NodeService.UpdateService"/>
 
   <targets>
     <target name="logconsole" xsi:type="Console"
