--- a/src/NodeService.WindowsService/Properties/launchSettings.json
+++ b/src/NodeService.WindowsService/Properties/launchSettings.json
@@ -1,28 +1,11 @@
 {
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "NodeService.WindowsService": {
       "commandName": "Project",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5164"
+      "commandLineArgs": "--mode WorkerService --env Development"
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:38106",
-      "sslPort": 0
-    }
+  "NodeService.WindowsService": {
+    "commandName": "Project"
   }
 }
