--- a/src/NodeService.WindowsService/appsettings.Development.json
+++ b/src/NodeService.WindowsService/appsettings.Development.json
@@ -6,31 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "GrpcConfig": {
-    "Address": "https://172.27.241.153:50061"
-    //"Address": "https://localhost:5001"
-    //"Address": "https://172.27.242.223:50061/"
-  },
-  "ServiceProcessConfiguration": {
-    "Contexts": [
-      {
-        "DisplayName": "NodeService.UpdateService",
-        "Description": "NodeService.UpdateService",
-        //"HttpAddress": "http://172.27.242.223:50060/",
-        "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:/shouhu/NodeService.UpdateService/",
-        "DurationMinutes": 10,
-        "ServiceName": "NodeService.UpdateService"
-      },
-      {
-        "DisplayName": "NodeService.DaemonService",
-        "Description": "NodeService.DaemonService",
-        //"HttpAddress": "http://172.27.242.223:50060/",
-        "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:/shouhu/NodeService.DaemonService/",
-        "DurationMinutes": 10,
-        "ServiceName": "NodeService.DaemonService"
-      }
-    ]
+  "ServerConfig": {
+    "GrpcAddress": "https://localhost:5001/",
+    "HttpAddress": "http://localhost:5000/"
   }
 }
