--- a/src/NodeService.WindowsService/appsettings.json
+++ b/src/NodeService.WindowsService/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ServerConfig": {
+  "ServerConfiguration": {
     "GrpcAddress": "https://172.27.242.223:50061/",
     "HttpAddress": "http://172.27.242.223:50060/"
   }
