上传服务信息

--- a/src/NodeService.WindowsService/Properties/launchSettings.json
+++ b/src/NodeService.WindowsService/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "NodeService.WindowsService": {
-      "commandName": "Project",
-      "commandLineArgs": "--mode WorkerService --env Development"
+      "commandName": "Project"
     },
     "NodeService.Uninstall": {
       "commandName": "Project",
