--- a/src/NodeService.WindowsService/appsettings.Development.json
+++ b/src/NodeService.WindowsService/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ServerConfig": {
+  "ServerConfiguration": {
     "GrpcAddress": "https://localhost:5001/",
     "HttpAddress": "http://localhost:5000/"
   }
