--- a/src/NodeService.WindowsService.Services/NodeService.WindowsService.Services.csproj
+++ b/src/NodeService.WindowsService.Services/NodeService.WindowsService.Services.csproj
@@ -25,6 +25,7 @@
 		<PackageReference Include="Quartz" Version="3.8.0" />
 		<PackageReference Include="System.Management" Version="8.0.0" />
 		<PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.0" />
+		<PackageReference Include="System.Management.Automation" Version="7.4.2" />
 	</ItemGroup>
 
 	<ItemGroup>
