--- a/src/NodeService.ServiceHost/Properties/launchSettings.json
+++ b/src/NodeService.ServiceHost/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "NodeService.ServiceHost": {
       "commandName": "Project",
-      "commandLineArgs": "--env Development"
+      "commandLineArgs": "--env Production"
     }
   }
 }
