--- a/src/NodeService.WindowsService/NodeService.WindowsService.csproj
+++ b/src/NodeService.WindowsService/NodeService.WindowsService.csproj
@@ -20,6 +20,7 @@
 		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
 		<PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
 		<PackageReference Include="Core.System.ServiceProcess" Version="2.0.1" />
+		<PackageReference Include="TaskScheduler" Version="2.10.1" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Properties\PublishProfiles\" />
