增加父进程监控功能。

--- a/src/NodeService.ServiceHost/Properties/launchSettings.json
+++ b/src/NodeService.ServiceHost/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "NodeService.ServiceHost": {
       "commandName": "Project",
-      "commandLineArgs": "--env Production"
+      "commandLineArgs": "--env Production --pid 10964"
     }
   }
 }
