--- a/src/NodeService.WindowsService/Properties/launchSettings.json
+++ b/src/NodeService.WindowsService/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "NodeService.WindowsService": {
       "commandName": "Project",
-      "commandLineArgs": "--mode WindowsService --env Development --doctor true"
+      "commandLineArgs": "--mode WindowsService --env Development"
     },
     "NodeService.Uninstall": {
       "commandName": "Project",
