--- a/src/NodeService.WindowsService/UpdateService.appsettings.Development.json
+++ b/src/NodeService.WindowsService/UpdateService.appsettings.Development.json
@@ -12,7 +12,7 @@
         "DisplayName": "NodeService.WindowsService",
         "Description": "NodeService.WindowsService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:/shouhu/NodeService.WindowsService/",
+        "InstallDirectory": "../NodeService.WindowsService/",
         "DurationMinutes": 10,
         "ServiceName": "NodeService.WindowsService",
         "Arguments": "--mode WindowsService  --env Development"
@@ -21,7 +21,7 @@
         "DisplayName": "NodeService.WorkerService",
         "Description": "NodeService.WorkerService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:/shouhu/NodeService.WorkerService/",
+        "InstallDirectory": "../NodeService.WorkerService/",
         "DurationMinutes": 10,
         "ServiceName": "NodeService.WorkerService",
         "Arguments": "--mode WorkerService  --env Development"
