--- a/src/NodeService.WindowsService/WorkerService.appsettings.Development.json
+++ b/src/NodeService.WindowsService/WorkerService.appsettings.Development.json
@@ -12,7 +12,7 @@
         "DisplayName": "NodeService.WindowsService",
         "Description": "NodeService.WindowsService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:/shouhu/NodeService.WindowsService/",
+        "InstallDirectory": "../NodeService.WindowsService/",
         "DurationMinutes": 10,
         "ServiceName": "NodeService.WindowsService",
         "Arguments": "--mode WindowsService --env Development"
@@ -21,7 +21,7 @@
         "DisplayName": "NodeService.UpdateService",
         "Description": "NodeService.UpdateService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:/shouhu/NodeService.UpdateService/",
+        "InstallDirectory": "../NodeService.UpdateService/",
         "DurationMinutes": 10,
         "ServiceName": "NodeService.UpdateService",
         "Arguments": "--mode UpdateService  --env Development"
