--- a/src/NodeService.WindowsService/appsettings.Development.json
+++ b/src/NodeService.WindowsService/appsettings.Development.json
@@ -9,5 +9,13 @@
   "ServerOptions": {
     "GrpcAddress": "https://localhost:5001/",
     "HttpAddress": "http://localhost:5000/"
+  },
+  "AppOptions": {
+    "Apps": [
+      {
+        "Name": "NodeService.ServiceHost"
+      }
+
+    ]
   }
 }
