--- a/src/NodeService.WindowsService/appsettings.json
+++ b/src/NodeService.WindowsService/appsettings.json
@@ -9,5 +9,13 @@
   "ServerOptions": {
     "GrpcAddress": "https://172.27.242.223:50061/",
     "HttpAddress": "http://172.27.242.223:50060/"
+  },
+  "AppOptions": {
+    "Apps": [
+      {
+        "Name": "NodeService.ServiceHost"
+      }
+
+    ]
   }
 }
