--- a/src/NodeService.WindowsService/UpdateService.appsettings.json
+++ b/src/NodeService.WindowsService/UpdateService.appsettings.json
@@ -12,7 +12,7 @@
         "DisplayName": "NodeService.WindowsService",
         "Description": "NodeService.WindowsService",
         "HttpAddress": "http://172.27.242.223:50060/",
-        "InstallDirectory": "../NodeService.WindowsService/",
+        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WindowsService\\",
         "DurationMinutes": 10,
         "ServiceName": "NodeService.WindowsService",
         "Arguments": ""
@@ -21,7 +21,7 @@
         "DisplayName": "NodeService.WorkerService",
         "Description": "NodeService.WorkerService",
         "HttpAddress": "http://172.27.242.223:50060/",
-        "InstallDirectory": "../NodeService.WorkerService/",
+        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WorkerService\\",
         "DurationMinutes": 10,
         "ServiceName": "NodeService.WorkerService",
         "Arguments": "--mode WorkerService --env Production"
