--- a/src/NodeService.WindowsService/WindowsService.appsettings.Development.json
+++ b/src/NodeService.WindowsService/WindowsService.appsettings.Development.json
@@ -5,7 +5,7 @@
         "DisplayName": "NodeService.UpdateService",
         "Description": "NodeService.UpdateService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "../NodeService.UpdateService/",
+        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.UpdateService\\",
         "DurationMinutes": 10,
         "ServiceName": "NodeService.UpdateService",
         "Arguments": "--mode UpdateService  --env Development"
@@ -14,7 +14,7 @@
         "DisplayName": "NodeService.WorkerService",
         "Description": "NodeService.WorkerService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "../NodeService.WorkerService/",
+        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WorkerService\\",
         "DurationMinutes": 10,
         "ServiceName": "NodeService.WorkerService",
         "Arguments": "--mode WorkerService  --env Development"
