优化AppHost逻辑，确保始终有一个AppHost处于可用状态。

--- a/src/NodeService.WindowsService/NodeService.WindowsService.csproj
+++ b/src/NodeService.WindowsService/NodeService.WindowsService.csproj
@@ -10,6 +10,10 @@
 		<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <Content Remove="Tasks\RegisterTaskStartupServiceMain.json" />
+	</ItemGroup>
+
 
 	<ItemGroup>
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
@@ -24,6 +28,9 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Properties\PublishProfiles\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include="Tasks\RegisterTaskStartupServiceMain.json" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\NodeService.Infrastructure\src\NodeService.Infrastructure\NodeService.Infrastructure.csproj" />
