--- a/src/NodeService.WindowsService/WindowsService.appsettings.Development.json
+++ b/src/NodeService.WindowsService/WindowsService.appsettings.Development.json
@@ -5,18 +5,18 @@
         "DisplayName": "NodeService.UpdateService",
         "Description": "NodeService.UpdateService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.UpdateService\\",
+        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.UpdateService.Development\\",
         "DurationMinutes": 10,
-        "ServiceName": "NodeService.UpdateService",
+        "ServiceName": "NodeService.UpdateService.Development",
         "Arguments": "--mode UpdateService  --env Development"
       },
       {
         "DisplayName": "NodeService.WorkerService",
         "Description": "NodeService.WorkerService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WorkerService\\",
+        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WorkerService.Development\\",
         "DurationMinutes": 10,
-        "ServiceName": "NodeService.WorkerService",
+        "ServiceName": "NodeService.WorkerService.Development",
         "Arguments": "--mode WorkerService  --env Development"
       }
     ]
