--- a/src/NodeService.WindowsService/WorkerService.appsettings.Development.json
+++ b/src/NodeService.WindowsService/WorkerService.appsettings.Development.json
@@ -5,18 +5,18 @@
         "DisplayName": "NodeService.WindowsService",
         "Description": "NodeService.WindowsService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WindowsService\\",
+        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WindowsService.Development\\",
         "DurationMinutes": 10,
-        "ServiceName": "NodeService.WindowsService",
+        "ServiceName": "NodeService.WindowsService.Development",
         "Arguments": "--mode WindowsService --env Development"
       },
       {
         "DisplayName": "NodeService.UpdateService",
         "Description": "NodeService.UpdateService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.UpdateService\\",
+        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.UpdateService.Development\\",
         "DurationMinutes": 10,
-        "ServiceName": "NodeService.UpdateService",
+        "ServiceName": "NodeService.UpdateService.Development",
         "Arguments": "--mode UpdateService  --env Development"
       }
     ]
