提交配置变更

--- a/src/NodeService.WindowsService/UpdateService.appsettings.Development.json
+++ b/src/NodeService.WindowsService/UpdateService.appsettings.Development.json
@@ -5,18 +5,18 @@
         "DisplayName": "NodeService.WindowsService",
         "Description": "NodeService.WindowsService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WindowsService.Development\\",
+        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WindowsService\\",
         "DurationMinutes": 10,
-        "ServiceName": "NodeService.WindowsService.Development",
+        "ServiceName": "NodeService.WindowsService",
         "Arguments": "--mode WindowsService  --env Development"
       },
       {
         "DisplayName": "NodeService.WorkerService",
         "Description": "NodeService.WorkerService",
         "HttpAddress": "http://localhost:5000/",
-        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WorkerService.Development\\",
+        "InstallDirectory": "C:\\Program Files\\NodeService\\NodeService.WorkerService\\",
         "DurationMinutes": 10,
-        "ServiceName": "NodeService.WorkerService.Development",
+        "ServiceName": "NodeService.WorkerService",
         "Arguments": "--mode WorkerService  --env Development"
       }
     ]
