--- a/src/NodeService.WindowsService/appsettings.Development.json
+++ b/src/NodeService.WindowsService/appsettings.Development.json
@@ -13,7 +13,7 @@
   "AppOptions": {
     "Apps": [
       {
-        "Name": "NodeService.ServiceHost.Development"
+        "Name": "NodeService.ServiceHost"
       }
 
     ]
