--- a/src/NodeService.ServiceHost/appsettings.Development.json
+++ b/src/NodeService.ServiceHost/appsettings.Development.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ServerOptions": {
-    "GrpcAddress": "https://localhost:5001/",
-    "HttpAddress": "http://localhost:5000/",
-    //"GrpcAddress": "https://172.27.242.223:50061/",
-    //"HttpAddress": "http://172.27.242.223:50060/"
+    //"GrpcAddress": "https://localhost:5001/",
+    //"HttpAddress": "http://localhost:5000/",
+    "GrpcAddress": "https://172.27.242.223:50061/",
+    "HttpAddress": "http://172.27.242.223:50060/"
   }
 }
