--- a/src/NodeService.ServiceHost/appsettings.Development.json
+++ b/src/NodeService.ServiceHost/appsettings.Development.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ServerOptions": {
     "GrpcAddress": "https://localhost:5001/",
-    "HttpAddress": "http://localhost:5000/",
+    "HttpAddress": "http://localhost:5000/"
     //"GrpcAddress": "https://172.27.242.223:50061/",
     //"HttpAddress": "http://172.27.242.223:50060/"
   }
