--- a/src/NodeService.ServiceHost/NodeService.ServiceHost.csproj
+++ b/src/NodeService.ServiceHost/NodeService.ServiceHost.csproj
@@ -17,6 +17,8 @@
 	<ItemGroup>
 		<PackageReference Include="Grpc.Net.Client.Web" Version="2.63.0" />
 		<PackageReference Include="Grpc.Net.ClientFactory" Version="2.63.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.6" />
+		<PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="8.0.0" />
 		<PackageReference Include="Python.Deployment" Version="2.0.5" />
 		<PackageReference Include="pythonnet_netstandard_py38_win" Version="2.5.2" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
