提交源代码。

--- a/src/NodeService.ServiceHost/appsettings.json
+++ b/src/NodeService.ServiceHost/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "ServerOptions": {
-    "GrpcAddress": "https://172.27.242.223:50061/",
-    "HttpAddress": "http://172.27.242.223:50060/"
+    "GrpcAddress": "https://10.201.76.21:50061/",
+    "HttpAddress": "http://10.201.76.21:50060/",
+    "BL_FileUploadHttpAddress": "http://10.201.76.21:50060/",
+    "GM_FileUploadHttpAddress": "http://172.27.242.223:50060/"
   }
 }
