--- a/src/NodeService.ServiceHost/appsettings.json
+++ b/src/NodeService.ServiceHost/appsettings.json
@@ -8,8 +8,6 @@
   "AllowedHosts": "*",
   "ServerOptions": {
     "GrpcAddress": "https://10.201.76.21:50061/",
-    "HttpAddress": "http://10.201.76.21:50060/",
-    "BL_FileUploadHttpAddress": "http://10.201.76.21:50060/",
-    "GM_FileUploadHttpAddress": "http://172.27.242.223:50060/"
+    "HttpAddress": "http://10.201.76.21:50060/"
   }
 }
