--- a/src/NodeService.Installer/NodeService.Installer/NodeService.Installer.csproj
+++ b/src/NodeService.Installer/NodeService.Installer/NodeService.Installer.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="System.Management" Version="8.0.0" />
 		<PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
 		<PackageReference Include="Core.System.ServiceProcess" Version="2.0.1" />
 		<PackageReference Include="FluentFTP" Version="48.0.3" />
