--- a/src/NodeService.DeviceHost/appsettings.Development.json
+++ b/src/NodeService.DeviceHost/appsettings.Development.json
@@ -8,8 +8,11 @@
   "AllowedHosts": "*",
   "ServerOptions": {
     "GrpcAddress": "https://localhost:5001/",
-    "HttpAddress": "http://localhost:5000/",
+    "HttpAddress": "http://localhost:5000/"
     //"GrpcAddress": "https://172.27.242.223:50061/",
     //"HttpAddress": "http://172.27.242.223:50060/"
+  },
+  "ConnectionStrings": {
+    "NodeDataDbMySQL": "server=10.201.76.21;userid=root;password=Xwd@2024IT;database=NodeDataDb;"
   }
 }
