--- a/src/NodeService.DeviceHost/appsettings.json
+++ b/src/NodeService.DeviceHost/appsettings.json
@@ -7,7 +7,10 @@
   },
   "AllowedHosts": "*",
   "ServerOptions": {
-    "GrpcAddress": "https://172.27.242.223:50061/",
-    "HttpAddress": "http://172.27.242.223:50060/"
+    "GrpcAddress": "https://10.201.76.21:50061/",
+    "HttpAddress": "http://10.201.76.21:50060/"
+  },
+  "ConnectionStrings": {
+    "NodeDataDbMySQL": "server=10.201.76.21;userid=root;password=Xwd@2024IT;database=NodeDataDb;"
   }
 }
