--- a/src/NodeService.DeviceHost/NodeService.DeviceHost.csproj
+++ b/src/NodeService.DeviceHost/NodeService.DeviceHost.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
     <PackageReference Include="NLog" Version="5.2.7" />
 	<PackageReference Include="NLog.Extensions.Logging" Version="5.3.5" />
 	<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
